--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,12 @@ body {
 	height: calc(100vh - 82px);
 }
 
-nav {
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
+.menu {
 	width: 100%;
 	height: 80px;
 	background-color: white;
@@ -19,13 +24,13 @@ nav {
 	align-items: center;
 }
 
-nav > ul {
+.menu-list {
 	list-style: none;
 	display: flex;
 	height: auto;
 }
 
-nav > ul > li {
+.menu-list-item {
 	margin: 0 20px;
 	color: green;
 	font-weight: bold;
@@ -33,13 +38,8 @@ nav > ul > li {
 	transition: filter .25s ease-in-out;
 }
 
-nav > ul > li:hover {
+.menu-list-item:hover {
 	filter: brightness(1.3);
-}
-
-a {
-	text-decoration: none;
-	color: inherit;
 }
 
 .content {
